--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 </head>
 <body>
-	<div id="holder" class="image-holder"></div>
+	<div id="holder" class="image-holder"><img src="img/cat.jpg" alt=""></div>
 	<nav>
 		<div class="three ui buttons">
 			<button class="ui button" data-animal="cat">Cat</button>
@@ -35,4 +35,4 @@
 	<script src="jquery-3.1.0.min.js"></script>
 	<script src="app.js"></script>
 </body>
-</html>
+</html> 
